Dev build: fix contrast errors

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9611,7 +9611,7 @@ footer > .sub-footer {
   border-color: #993333;
 }
 .front-page-card .details-context {
-  color: #497e49;
+  color: #416d41;
 }
 .jumbotron-header {
   background-image: url('../img/jumbotron-header-bg.jpg');
