--- a/assets/less/layouts/pages/_home.less
+++ b/assets/less/layouts/pages/_home.less
@@ -147,7 +147,7 @@
   }
 
   .details-context {
-    color: #497e49;
+    color: #416d41;
   }
 
 }
